5-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp
  namespace: hw2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  tls:
    - hosts:
      - arch.homework
      secretName: nginx-test-tls
      
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: myapp
                port:
                  number: 7777
            pathType: Prefix
            path: /
